--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Tabi</title>
 
 	<link rel="icon" href="images/favicon.png">
-	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/libs/bootstrap-grid.min.css">
 	<link rel="stylesheet" href="css/libs/jquery-ui.min.css">
 	<link rel="stylesheet" href="css/libs/starrr.css">
@@ -68,7 +68,7 @@
 		</div>
 	</div>
 
-	<script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
+	<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 	<script src="js/libs/jquery-ui.min.js"></script>
 	<script src="js/libs/starrr.js"></script>
 	<script src="js/libs/jquery.circliful.js"></script>
